fix(AccountSearch): layout issues

--- a/WotDashLab.App/ClientApp/src/app/accounts/search/account-search.component.scss
+++ b/WotDashLab.App/ClientApp/src/app/accounts/search/account-search.component.scss
@@ -1,5 +1,11 @@
 ﻿@import '../../../assets/variables';
 
+.header-container {
+  display: flex;
+  column-gap: .5em;
+  align-items: flex-start;
+}
+
 .grid-container {
   margin: 12px auto 0;
   flex-direction: column;
@@ -21,8 +27,10 @@
     }
 
     .grid-cell {
-      white-space: nowrap;
       padding: 8px;
+      white-space: nowrap;
+      text-overflow: ellipsis;
+      overflow-x: hidden;
 
       &:not(:first-child) {
         border-left: 1px solid #ddd;
@@ -39,10 +47,10 @@
         flex-basis: 16em;
       }
       &.createdAt-cell {
-        flex-basis: 12em;
+        flex: 0 0 12em;
       }
       &.games-cell {
-        flex-grow: 1;
+        flex: 0 1 260px;
       }
     }
   }
