--- a/WotDashLab.App/ClientApp/src/app/common/buttons/drop-down-button.component.scss
+++ b/WotDashLab.App/ClientApp/src/app/common/buttons/drop-down-button.component.scss
@@ -78,7 +78,6 @@
     margin: 0;
     overflow-x: hidden;
     text-overflow: ellipsis;
-    user-select: none;
     cursor: pointer;
 
 
