--- a/WotDashLab.App/ClientApp/src/assets/variables.scss
+++ b/WotDashLab.App/ClientApp/src/assets/variables.scss
@@ -29,3 +29,5 @@ $smallScreen: 576px;
 $mediumScreen: 768px;
 $largeScreen: 992px;
 $extraLargeScreen: 1200px;
+
+$control-height: 2.4rem;
